k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recruithub
  labels:
    name: recruithub
    environment: production
